--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,27 @@
   padding: 0;
   box-sizing: border-box;
 }
+:root{
+  --color-161921: #131921;
+  --color-3b4149: #3b4119;
+}
+
+body{
+  font-family: "Runik", sans-serif;
+}
+
+a{
+  text-decoration: none;
+  display: inline-block;
+}
+
+/* Header part*/
+
+.header-top-strip{
+  border-bottom: 1px solid var(--color-3b4149);
+  background: var(--color-161921);
+}
+.header-upper{
+  background: var(--color-161921);
+}
+/*Header part end here*/
